# zentinel-agent-grpc-inspector

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: agent.rs  config.rs  grpc.rs  lib.rs  main.rs  matchers.rs  rate_limiter.rs
tests/: integration.rs
