[package]
name = "sentinel-agent-grpc-inspector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "gRPC security agent for Sentinel - method authorization, rate limiting, metadata inspection"
repository = "https://github.com/raskell-io/sentinel-agent-grpc-inspector"
keywords = ["grpc", "security", "proxy", "sentinel", "protobuf"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Sentinel SDK
sentinel-agent-sdk = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
async-trait = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Matching
regex = "1"
glob = "0.3"
ipnet = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "sentinel-agent-grpc-inspector"
path = "src/main.rs"
