[package]
name = "zentinel-agent-grpc-inspector"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "gRPC security agent for Zentinel - method authorization, rate limiting, metadata inspection"
repository = "https://github.com/zentinelproxy/zentinel-agent-grpc-inspector"
keywords = ["grpc", "security", "proxy", "zentinel", "protobuf"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Zentinel agent protocol (v2)
zentinel-agent-protocol = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
async-trait = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Matching
regex = "1"
glob = "0.3"
ipnet = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization for config
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "zentinel-agent-grpc-inspector"
path = "src/main.rs"
